--- a/report/reportconfig/BoletimRio_InfoDengue.Rnw
+++ b/report/reportconfig/BoletimRio_InfoDengue.Rnw
@@ -38,16 +38,17 @@ library('xtable')
 \begin{mdframed}[style=sidebar,frametitle={}] % Sidebar box
 
 %-----------------------------------------------------------
-\textbf{{\LARGE{Rio de Janeiro}}}
+%\textbf{{\LARGE{cidade do Rio de Janeiro}}}
 
-\hypertarget{contents}{\textbf{{\large Boletim Semanal}}} 
+\hypertarget{contents}{\textbf{{\LARGE Boletim Semanal}}} 
 
-\textbf{Semana \Sexpr{(env$se)} de \Sexpr{env$ano}} % se, ano
+\textbf{\large{Semana \Sexpr{(env$se)} de \Sexpr{env$ano}}} % se, ano
 
 \begin{itemize}
-\item \hyperlink{estado}{O Estado} 
-\item \hyperlink{regional}{A Regional Metropolitana I}
-\item \hyperlink{mun}{O Município}
+\item \hyperlink{estado}{Dengue no Estado} 
+\item \hyperlink{regional}{Dengue na Regional Metropolitana I}
+\item \hyperlink{mun}{Dengue no Município}
+\item \hyperlink{munC}{Chikungunia no Município}
 \item \hyperlink{aps}{Áreas Programáticas da Saúde}
 \end{itemize}
 \centerline {\rule{.75\linewidth}{.25pt}} % Horizontal line
@@ -74,16 +75,17 @@ library('xtable')
 %--------------------------------------------------------------------------------
   %	TEXTO PRINCIPAL - PRIMEIRA PAGINA - ALERTA A NIVEL DO ESTADO
 %-------------------------------------------------------------------------------
+
   \hypertarget{estado}{\heading{Situação da Dengue no Estado do Rio de Janeiro}{6pt}} % \hypertarget provides a label to reference using 
 
-Desde o início do ano, \Sexpr{env$totanoUF} casos foram registrados no estado, sendo \Sexpr{env$totultseUF} na semana \Sexpr{env$seUF}. A figura abaixo mostra as condições de transmissão em cada município.
+Esse é o boletim de situação da Dengue e Chikungunia do Município do Rio de Janeiro. Para contextualização, também é apresentada a situação da dengue no Estado e na Região Metropolitana I. No Estado, desde o início do ano, \Sexpr{env$totanoUF} casos de dengue foram registrados, sendo \Sexpr{env$totultseUF} desses na semana \Sexpr{env$seUF}. O mapa mostra as condições de transmissão da dengue no estado.
 
 % Mapa estadual
 \includegraphics[width=0.8\textwidth]{\Sexpr{env$figmapaestado}}
 %-----------------------------------------------------------
   
-  Dos \Sexpr{env$nmunicipios} municipios, \Sexpr{env$nverdeUF} encontram-se em nivel verde, \Sexpr{env$namareloUF} em nivel amarelo, \Sexpr{env$nlaranjaUF} em nivel laranja e \Sexpr{env$nvermelhoUF} em nivel vermelho referentes a semana epidemiológica \Sexpr{env$seUF}-\Sexpr{env$anoUF}. Para informações mais atualizadas
-sobre o município do Rio de Janeiro ter acesso ao mapa interativo do estado consultar em \href{http://info.dengue.mat.br}{\textit{Info Dengue}}.
+  Dos \Sexpr{env$nmunicipios} municipios, \Sexpr{env$nverdeUF} encontram-se em nivel verde para dengue, \Sexpr{env$namareloUF} em nivel amarelo, \Sexpr{env$nlaranjaUF} em nivel laranja e \Sexpr{env$nvermelhoUF} em nivel vermelho referentes a semana epidemiológica \Sexpr{env$seUF}-\Sexpr{env$anoUF}. Para informações mais atualizadas
+e ter acesso ao mapa interativo do estado consultar em \href{http://info.dengue.mat.br}{\textit{Info Dengue}}.
 
 
 %--------------------------------------------------------------------------------
@@ -98,11 +100,11 @@ As cores indicam niveis de atenção
 \item[Verde:] temperaturas amenas, baixa incidência de casos.      
 \item[Amarelo:] temperatura propícia para a população do vetor e transmissão da dengue.
 \item[Laranja:] transmissão aumentada e sustentada de dengue. 
-\item[Vermelho:] incidência alta de dengue, acima dos 90\% históricos.
+\item[Vermelho:] incidência alta, acima dos 90\% históricos.
 \end{description}
 \end{mdframed}
 
-\textbf{Na semana passada:} \Sexpr{env$namarelo1UF} municípios em nivel amarelo, \Sexpr{env$nlaranja1UF} em laranja e \Sexpr{env$nvermelho1UF} em vermelho.  
+\textbf{Na semana passada:} \Sexpr{env$namarelo1UF} municípios do Estado do Rio de Janeiro estavam em nivel amarelo para dengue, \Sexpr{env$nlaranja1UF} em laranja e \Sexpr{env$nvermelho1UF} em vermelho.  
 
 \end{minipage} % End the main body - first page mini page
 
@@ -116,6 +118,7 @@ As cores indicam niveis de atenção
 
 \hypertarget{regional}{\heading{Situação da Dengue na Regional Metropolitana I}{6pt}} % titulo
 
+O Município do Rio de Janeiro está localizado na Regional de Saúde Metropolitana I. A tabela abaixo mostra os casos notificados nas últimas seis semanas e os casos preditos de acordo com o modelo Infodengue. O mapa mostra a situação atual de risco de transmissão da dengue na Regional. 
 % Mapa da regional
 \vspace{2cm}
 \captionof{figure}[tabregional]{Mapa de Alerta da Regional de Saúde}
@@ -165,20 +168,24 @@ for (j in 1:env$nmunicipiosRS) {
 \end{minipage} % End of the sidebar mini page
 \newpage
 
-  %-----------------------------------------------------------------------------------%	MAIN BODY - THIRD PAGE - PARTE PRINCIPAL - Municipio
+%-----------------------------------------------------------------------------------%	MAIN BODY - THIRD PAGE - PARTE PRINCIPAL - Municipio
 %-----------------------------------------------------------------------------------
 \begin{minipage}[t]{0.6\linewidth} % Mini page taking up 100% of the actual page
-\hypertarget{mun}{\heading{Situação da Dengue na Cidade do Rio de Janeiro: Mapa}{6pt}} % \hypertarget 
+\hypertarget{mun}{\heading{Situação atual da Dengue na Cidade do Rio de Janeiro}{6pt}} % \hypertarget 
 
-%A figura abaixo mostra a série histórica do município: (TOPO) Série temporal de casos suspeitos de dengue e série temporal de dengue mencionada em rede social; (MEIO) Perfil da temperatura; (BAIXO) histórico do alerta. 
+Em 2017, até agora, foram notificados \Sexpr{env$tot2017} casos de dengue na cidade do Rio de Janeiro. Para comparação, em 2016, no mesmo período, \Sexpr{env$tot2016se} casos de dengue foram notificados. No total, em 2016, ocorreram \Sexpr{env$tot2016} casos. 
+
+O Município do Rio de Janeiro é dividido em 10 áreas programáticas da saúde (APS). O mapa mostra a situação atual de transmissão da dengue em cada APS. 
 
 \includegraphics[width=0.95\textwidth]{\Sexpr{env$nomemapario}}
 
 \small{Veja o mapa interativo em http://alerta.dengue.mat.br/rio}
 
-\vspace{2cm}
+\vspace{1cm}
 
-\captionof{table}{Resumo das últimas seis semanas epidemiológicas}
+Na tabela, tem-se o número de casos notificados no município e o número predito pelo Infodengue nas últimas seis semanas. Apresenta-se também a incidência por 100.000 habitantes. Temperatura mínima acima de 22C por mais de três semanas é um indicativo de condições propícias para transmissão da dengue. 
+
+\captionof{table}{Resumo da dengue nas últimas seis semanas epidemiológicas}
 \begin{center}
 \input{\Sexpr{env$tabelaRio}}
 \end{center}
@@ -192,7 +199,7 @@ for (j in 1:env$nmunicipiosRS) {
   %%      TERCEIRA PAGINA: CAIXA LATERAL - INDICE APS
 %%-------------------------------------------------------------------------
   
-  \textbf{Áreas Programáticas da Saúde} 
+  \textbf{Dengue nas APS} 
 
 \begin{itemize}
 <<bulletsaps,echo=FALSE,results=tex>>=
@@ -219,9 +226,11 @@ for (j in 1:10) {
   
 \hypertarget{municipio}{\heading{Situação da Dengue na Cidade do Rio de Janeiro: Séries Históricas}{6pt}} % \hypertarget 
 
-\vspace{2cm}
+O Infodengue utiliza em seus modelos,dados de menção de dengue nas redes sociais, além dos dados de notificação pelos médicos e dados de temperatura. Esses são os dados desde 2012.
+\vspace{1cm}
+\begin{center}
 \includegraphics[width=0.8\textwidth]{\Sexpr{env$figcidade}}
-
+\end{center}
 A linha tracejada azul indica o limiar pré-epidêmico; a linha tracejada vermelha indica o limiar de atividade alta (acima do qual é acionado o alerta vermelho). 
 
 \BackToContents % Link back to the contents of the newsletter
@@ -229,11 +238,65 @@ A linha tracejada azul indica o limiar pré-epidêmico; a linha tracejada vermel
 
 \newpage
 
+
+%-----------------------------------------------------------------------------------%	
+  % MAIN BODY - FIFTH PAGE - Situação da chikungunia na cidade: SÉRIE HISTÓRICA e MAPA
+%-----------------------------------------------------------------------------------
+
+\begin{minipage}[t]{0.6\linewidth} % Mini page taking up 100% of the actual page
+\hypertarget{mun}{\heading{Situação da Chikungunia na Cidade do Rio de Janeiro}{6pt}} % \hypertarget 
+
+Em 2017, até agora, foram notificados \Sexpr{env$totChik2017} casos de chikungunia na cidade do Rio de Janeiro, sendo \Sexpr{env$totChik2017ult} na última semana. Para comparação, em 2016, no mesmo período, \Sexpr{env$totChik2016se} casos de chikungunia foram notificados na cidade do Rio de Janeiro. No total, em 2016, ocorreram \Sexpr{env$totChik2016} casos. 
+
+Veja o mapa da situação atual de transmissão de chikungunia nas APS:
+
+\includegraphics[width=0.95\textwidth]{\Sexpr{env$nomemaparioChik}}
+
+
+Confira a série histórica de chikungunia na cidade do Rio de Janeiro desde janeiro de 2016.
+
+\begin{center}
+\includegraphics[width=0.95\textwidth]{\Sexpr{env$figcidadeChik}}
+\end{center}
+
+\BackToContents % Link back to the contents of the newsletter
+\end{minipage}
+\begin{minipage}[t]{.26\linewidth} 
+\begin{mdframed}[style=sidebar,frametitle={}] 
+
+%%--------------------------------------------------------------------------
+  %%      TERCEIRA PAGINA: CAIXA LATERAL - INDICE APS
+%%-------------------------------------------------------------------------
+  
+  \textbf{Chikungunia nas APS} 
+
+\begin{itemize}
+<<bulletsaps,echo=FALSE,results=tex>>=
+
+aps <- unique(env$tabapsChik$aps)
+coresbullets = c(verde='\\gsquare',amarelo='\\ysquare',
+                 laranja='\\osquare',vermelho='\\rsquare')
+for (j in 1:10) {
+  nivel = env$tabapsChik$nivel[env$tabapsChik$aps == aps[j] & env$tabapsChik$se==env$datarel]
+  corbullet = '\\wsquare'
+  corbullet = coresbullets[nivel] 
+  cat(paste(corbullet,"APS ",aps[j],'\n'))
+}
+@
+\end{itemize}
+
+\end{mdframed} 
+\end{minipage}
+\newpage
+
+
 %-----------------------------------------------------------------------------------%	
   % MAIN BODY - FIFTH and SIXTH PAGE - Situação por APS - graficos 
 %-----------------------------------------------------------------------------------
   
-  \hypertarget{aps}{\heading{Situação nas Áreas Programáticas de Saúde}{6pt}} % \hypertarget 
+  \hypertarget{aps}{\heading{Nas Áreas Programáticas de Saúde: Dengue}{6pt}} % \hypertarget 
+
+Confira a série histórica de alertas para dengue nas APS do Rio de Janeiro.
 
 \vspace{2cm}
 \includegraphics[width=0.8\textwidth]{\Sexpr{env$figaps1}}
@@ -242,36 +305,59 @@ A linha tracejada azul indica o limiar pré-epidêmico; a linha tracejada vermel
 
 \newpage
 
-\heading{Situação nas Áreas Programáticas de Saúde (cont.)}{6pt} 
+\heading{Dengue (cont.)}{6pt} 
 
 \vspace{2cm}
 \includegraphics[width=0.8\textwidth]{\Sexpr{env$figaps2}}
 
 \newpage
 
+
 %-----------------------------------------------------------------------------------%	
-  % MAIN BODY - SEVENTH PAGE - Situação por APS - tabelas
+  % MAIN BODY - SEVENTH and EIGHTTH PAGE - Situação por APS chik - graficos 
 %-----------------------------------------------------------------------------------
   
-\heading{Situação nas Áreas Programáticas de Saúde: Tabelas}{6pt}
+  \hypertarget{aps}{\heading{Nas Áreas Programáticas de Saúde: Chikungunia}{6pt}} % \hypertarget 
+Confira a série histórica de alertas para chikungunia nas APS do Rio de Janeiro.
+\vspace{2cm}
+\includegraphics[width=0.8\textwidth]{\Sexpr{env$figaps1Chik}}
+
+(cont.)
+
+\newpage
+
+\heading{Chikungunia (cont.)}{6pt} 
+
+\vspace{2cm}
+\includegraphics[width=0.8\textwidth]{\Sexpr{env$figaps2Chik}}
+
+\newpage
+
+%-----------------------------------------------------------------------------------%	
+  % MAIN BODY - PAG NOVE E DEZ - Situação de dengue e chik por APS - tabelas
+%-----------------------------------------------------------------------------------
+  
+\heading{Tabelas: Resumo das últimas quatro semanas epidemiológicas da dengue e chikungunia nas APS.}{6pt}
 
 \begin{center}
-Resumo das últimas quatro semanas epidemiológicas nas Áreas Programáticas de Saúde
 
 <<tabelas_saps,echo=FALSE,results=tex>>=
 
   aps <- unique(env$tabaps$aps)
-  cat(paste('\\captionof{table}{\'APS',aps[1],'\'}\n'))
+  cat(paste('\\captionof{table}{Dengue na \'APS',aps[1],'\'}\n'))
   cat(paste('\\input{',env$tabela1,'}\n',sep=''))
-  cat(paste('\\captionof{table}{\'APS',aps[2],'\'}\n'))
+  cat(paste('\\captionof{table}{Chikungunia na \'APS',aps[1],'\'}\n'))
+  cat(paste('\\input{',env$tabelaC1,'}\n',sep=''))
+  
+  cat(paste('\\captionof{table}{Dengue na \'APS',aps[2],'\'}\n'))
   cat(paste('\\input{',env$tabela2,'}\n',sep=''))
-  cat(paste('\\captionof{table}{\'APS',aps[3],'\'}\n'))
+  cat(paste('\\captionof{table}{Chikungunia na \'APS',aps[2],'\'}\n'))
+  cat(paste('\\input{',env$tabelaC2,'}\n',sep=''))
+  
+  cat(paste('\\captionof{table}{Dengue na \'APS',aps[3],'\'}\n'))
   cat(paste('\\input{',env$tabela3,'}\n',sep=''))
-  cat(paste('\\captionof{table}{\'APS',aps[4],'\'}\n'))
-  cat(paste('\\input{',env$tabela4,'}\n',sep=''))
-  cat(paste('\\captionof{table}{\'APS',aps[5],'\'}\n'))
-  cat(paste('\\input{',env$tabela5,'}',sep=''))
-
+  cat(paste('\\captionof{table}{Chikungunia na \'APS',aps[3],'\'}\n'))
+  cat(paste('\\input{',env$tabelaC3,'}\n',sep=''))
 @
 \end{center}
 \small{\hyperlink{vartab}{ver descrição das variáveis}}
@@ -280,32 +366,73 @@ Resumo das últimas quatro semanas epidemiológicas nas Áreas Programáticas de
     
 \newpage
   
-\heading{Situação nas Áreas Programáticas de Saúde: Tabelas (cont.)}{6pt}
+\heading{Tabelas (cont.)}{6pt}
 
 \begin{center}
-Resumo das últimas quatro semanas epidemiológicas
-nas Áreas Programáticas de Saúde
 
-  
 <<tabelas_saps,echo=FALSE,results=tex>>=
 
   aps <- unique(env$tabaps$aps)
-  cat(paste('\\captionof{table}{\'APS',aps[6],'\'}\n'))
+  cat(paste('\\captionof{table}{Dengue na \'APS',aps[4],'\'}\n'))
+  cat(paste('\\input{',env$tabela4,'}\n',sep=''))
+  cat(paste('\\captionof{table}{Chikungunia na \'APS',aps[4],'\'}\n'))
+  cat(paste('\\input{',env$tabelaC4,'}\n',sep=''))
+  
+  cat(paste('\\captionof{table}{Dengue na \'APS',aps[5],'\'}\n'))
+  cat(paste('\\input{',env$tabela5,'}',sep=''))
+  cat(paste('\\captionof{table}{Chikungunia na \'APS',aps[5],'\'}\n'))
+  cat(paste('\\input{',env$tabelaC5,'}',sep=''))
+  
+  cat(paste('\\captionof{table}{Dengue na \'APS',aps[6],'\'}\n'))
   cat(paste('\\input{',env$tabela6,'}\n',sep=''))
-  cat(paste('\\captionof{table}{\'APS',aps[7],'\'}\n'))
+  cat(paste('\\captionof{table}{Chikungunia na \'APS',aps[6],'\'}\n'))
+  cat(paste('\\input{',env$tabelaC6,'}\n',sep=''))
+  
+@
+
+
+\end{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}
+    
+    
+\newpage
+  
+\heading{Tabelas (cont.)}{6pt}
+
+\begin{center}
+
+<<tabelas_saps,echo=FALSE,results=tex>>=
+
+  aps <- unique(env$tabaps$aps)
+ 
+  cat(paste('\\captionof{table}{Dengue na \'APS',aps[7],'\'}\n'))
   cat(paste('\\input{',env$tabela7,'}\n',sep=''))
-  cat(paste('\\captionof{table}{\'APS',aps[8],'\'}\n'))
+  cat(paste('\\captionof{table}{Chikungunia na \'APS',aps[7],'\'}\n'))
+  cat(paste('\\input{',env$tabelaC7,'}\n',sep=''))
+  
+  cat(paste('\\captionof{table}{Dengue na \'APS',aps[8],'\'}\n'))
   cat(paste('\\input{',env$tabela8,'}\n',sep=''))
-  cat(paste('\\captionof{table}{\'APS',aps[9],'\'}\n'))
+  cat(paste('\\captionof{table}{Chikungunia na \'APS',aps[8],'\'}\n'))
+  cat(paste('\\input{',env$tabelaC8,'}\n',sep=''))
+
+  cat(paste('\\captionof{table}{Dengue na \'APS',aps[9],'\'}\n'))
   cat(paste('\\input{',env$tabela9,'}\n',sep=''))
-  cat(paste('\\captionof{table}{\'APS',aps[10],'\'}\n'))
+  cat(paste('\\captionof{table}{Chikungunia na \'APS',aps[9],'\'}\n'))
+  cat(paste('\\input{',env$tabelaC9,'}\n',sep=''))
+  
+  cat(paste('\\captionof{table}{Dengue na \'APS',aps[10],'\'}\n'))
   cat(paste('\\input{',env$tabela10,'}',sep=''))
+  cat(paste('\\captionof{table}{Chikungunia na \'APS',aps[10],'\'}\n'))
+  cat(paste('\\input{',env$tabelaC10,'}',sep=''))
+  
 
 @
 
 
 \end{center}
 \small{\hyperlink{vartab}{ver descrição das variáveis}}
+
+
     
     %---------------------------------------------------------------------------------
     %	Variáves nas Tabelas, Créditos e Contato
