--- a/report/reportconfig/BoletimEstadual_InfoDengue.Rnw
+++ b/report/reportconfig/BoletimEstadual_InfoDengue.Rnw
@@ -122,11 +122,9 @@ Dos \Sexpr{env$nmunicipios} municipios, \Sexpr{env$nverdeUF} encontram-se em niv
 \hypertarget{descriptivebox}{\heading{O código de Cores}{1pt}} % \hypertarget provides a label to reference using \hyperlink{label}{link text}
 As cores indicam os seguintes níveis de atenção:
 \begin{description}
-\item[Verde:] temperaturas amenas, baixa incidência de casos.      
-\item[Amarelo:] temperatura propícia para a população do vetor e transmissão da dengue.
-\item[Laranja:] transmissão aumentada e sustentada de dengue. 
-\item[Vermelho:] incidência alta de dengue, acima dos 90\% históricos.
-\end{description}
+\item[Verde:] condições climáticas desfavoráveis, seja por baixa temperatura ou baixa umidade, e baixa incidência de casos. \item[Amarelo:] condições climáticas propícias para aumento da população do vetor e transmissão de arboviroses.
+\item[Laranja:] transmissão aumentada e sustentada da dengue 
+\item[Vermelho:] incidência alta, acima dos 90\% históricos.\end{description}
 \end{mdframed}
 
 \end{minipage} % End the main body - first page mini page
